##
# CMake minimum required version for the project.
##
cmake_minimum_required(VERSION 3.11)

##
# Part I - Foundations C++ Project CMakeLists.txt.
##
project(part_i_foundations)

##
# Add subdirectories to the build.
##

##
# Add Chapter 1 - Introduction subdirectory.
##
add_subdirectory(chapter1)

##
# Add Chapter 2 - Our First OpenGL Program subdirectory.
##
add_subdirectory(chapter2)

##
# Add Chapter 3 - Following the Pipeline subdirectory.
##
add_subdirectory(chapter3)
